limbaj_copy/limbaj.output
State 15 conflicts: 1 shift/reduce
State 24 conflicts: 1 shift/reduce, 1 reduce/reduce
State 37 conflicts: 1 shift/reduce
State 40 conflicts: 3 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 3 shift/reduce
State 64 conflicts: 2 reduce/reduce
State 65 conflicts: 2 reduce/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 8 shift/reduce
State 131 conflicts: 8 shift/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 142 conflicts: 2 reduce/reduce


Grammar

    0 $accept: progr $end

    1 progr: declaratii bloc_main lista_functii

    2 declaratii: declaratie ';'
    3           | declaratii declaratie ';'

    4 declaratie: TIP ID
    5           | CONST TIP ID
    6           | STRUCT ID '{' declaratii '}'
    7           | TIP ID '(' lista_param ')'
    8           | TIP ID '(' ')'
    9           | ARRAY LT TIP ',' INTEGER GT ID

   10 lista_param: param
   11            | lista_param ',' param

   12 param: TIP ID

   13 conditie: ID
   14         | STRING
   15         | INTEGER
   16         | BOOLEAN
   17         | FLOAT
   18         | conditie LT conditie
   19         | conditie GT conditie
   20         | conditie LTE conditie
   21         | conditie GTE conditie
   22         | conditie EQ conditie
   23         | conditie NEQ conditie
   24         | conditie OR conditie
   25         | conditie AND conditie
   26         | '(' conditie ')'

   27 bloc: '{' lista_instructiuni '}'

   28 bloc_main: MAIN '{' lista_instructiuni '}'

   29 lista_functii: functie
   30              | lista_functii functie

   31 functie: FUNCTION TIP ID '(' lista_param ')' bloc
   32        | %empty

   33 lista_instructiuni: lista_control
   34                   | lista_statement
   35                   | lista_instructiuni lista_control
   36                   | lista_instructiuni lista_statement

   37 lista_statement: statement ';'
   38                | lista_statement statement ';'

   39 statement: ID ASSIGN ID
   40          | ID ASSIGN INTEGER
   41          | ID ASSIGN expresie
   42          | ID ASSIGN FLOAT
   43          | ID ASSIGN BOOLEAN
   44          | ID ASSIGN '"' STRING '"'
   45          | ID '.' ID ASSIGN ID '.' ID
   46          | ID '.' ID ASSIGN INTEGER
   47          | ID '.' ID ASSIGN FLOAT
   48          | ID '.' ID ASSIGN BOOLEAN
   49          | ID '.' ID ASSIGN '"' STRING '"'
   50          | ID '(' lista_apel ')'
   51          | ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | ID '[' INTEGER ']' ASSIGN INTEGER
   53          | ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | ID '[' INTEGER ']' ASSIGN FLOAT
   55          | ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | ID '[' INTEGER ']' ASSIGN expresie

   57 expresie: expresie PLUS expresie
   58         | expresie MINUS expresie
   59         | expresie MULT expresie
   60         | expresie SUBT expresie
   61         | '(' expresie ')'
   62         | ID
   63         | INTEGER

   64 control: IF '(' conditie ')' '{' lista_instructiuni '}'
   65        | IF '(' conditie ')' ELSE '{' lista_instructiuni '}'
   66        | FOR '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'
   67        | WHILE '(' conditie ')' '{' lista_instructiuni '}'

   68 lista_control: control
   69              | lista_control control

   70 lista_apel: INTEGER
   71           | lista_apel ',' INTEGER


Terminals, with rules where they appear

    $end (0) 0
    '"' (34) 44 49 53
    '(' (40) 7 8 26 31 50 61 64 65 66 67
    ')' (41) 7 8 26 31 50 61 64 65 66 67
    ',' (44) 9 11 71
    '.' (46) 45 46 47 48 49
    ';' (59) 2 3 37 38 66
    '[' (91) 51 52 53 54 55 56
    ']' (93) 51 52 53 54 55 56
    '{' (123) 6 27 28 64 65 66 67
    '}' (125) 6 27 28 64 65 66 67
    error (256)
    ID <strval> (258) 4 5 6 7 8 9 12 13 31 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 62
    TIP <strval> (259) 4 5 7 8 9 12 31
    ASSIGN <strval> (260) 39 40 41 42 43 44 45 46 47 48 49 51 52 53 54 55 56
    INTEGER <intval> (261) 9 15 40 46 51 52 53 54 55 56 63 70 71
    MAIN <intval> (262) 28
    STRUCT <intval> (263) 6
    IF <intval> (264) 64 65
    ELSE <intval> (265) 65
    FOR <intval> (266) 66
    WHILE <intval> (267) 67
    AND <intval> (268) 25
    OR <intval> (269) 24
    LT <intval> (270) 9 18
    GT <intval> (271) 9 19
    LTE <intval> (272) 20
    GTE <intval> (273) 21
    PLUS <intval> (274) 57
    MINUS <intval> (275) 58
    MULT <intval> (276) 59
    SUBT <intval> (277) 60
    EQ <intval> (278) 22
    NEQ <intval> (279) 23
    STRING <strval> (280) 14 44 49 53
    BOOLEAN <boolval> (281) 16 43 48 55
    FLOAT <floatval> (282) 17 42 47 54
    CONST <floatval> (283) 5
    FUNCTION <floatval> (284) 31
    ARRAY <floatval> (285) 9


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    progr (42)
        on left: 1
        on right: 0
    declaratii (43)
        on left: 2 3
        on right: 1 3 6
    declaratie (44)
        on left: 4 5 6 7 8 9
        on right: 2 3
    lista_param (45)
        on left: 10 11
        on right: 7 11 31
    param (46)
        on left: 12
        on right: 10 11
    conditie (47)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 25 26 64 65 66 67
    bloc (48)
        on left: 27
        on right: 31
    bloc_main (49)
        on left: 28
        on right: 1
    lista_functii (50)
        on left: 29 30
        on right: 1 30
    functie (51)
        on left: 31 32
        on right: 29 30
    lista_instructiuni (52)
        on left: 33 34 35 36
        on right: 27 28 35 36 64 65 66 67
    lista_statement (53)
        on left: 37 38
        on right: 34 36 38
    statement (54)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 37 38 66
    expresie (55)
        on left: 57 58 59 60 61 62 63
        on right: 41 56 57 58 59 60 61
    control (56)
        on left: 64 65 66 67
        on right: 68 69
    lista_control (57)
        on left: 68 69
        on right: 33 35 69
    lista_apel (58)
        on left: 70 71
        on right: 50 71


State 0

    0 $accept: . progr $end
    1 progr: . declaratii bloc_main lista_functii
    2 declaratii: . declaratie ';'
    3           | . declaratii declaratie ';'
    4 declaratie: . TIP ID
    5           | . CONST TIP ID
    6           | . STRUCT ID '{' declaratii '}'
    7           | . TIP ID '(' lista_param ')'
    8           | . TIP ID '(' ')'
    9           | . ARRAY LT TIP ',' INTEGER GT ID

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2
    CONST   shift, and go to state 3
    ARRAY   shift, and go to state 4

    progr       go to state 5
    declaratii  go to state 6
    declaratie  go to state 7


State 1

    4 declaratie: TIP . ID
    7           | TIP . ID '(' lista_param ')'
    8           | TIP . ID '(' ')'

    ID  shift, and go to state 8


State 2

    6 declaratie: STRUCT . ID '{' declaratii '}'

    ID  shift, and go to state 9


State 3

    5 declaratie: CONST . TIP ID

    TIP  shift, and go to state 10


State 4

    9 declaratie: ARRAY . LT TIP ',' INTEGER GT ID

    LT  shift, and go to state 11


State 5

    0 $accept: progr . $end

    $end  shift, and go to state 12


State 6

    1 progr: declaratii . bloc_main lista_functii
    3 declaratii: declaratii . declaratie ';'
    4 declaratie: . TIP ID
    5           | . CONST TIP ID
    6           | . STRUCT ID '{' declaratii '}'
    7           | . TIP ID '(' lista_param ')'
    8           | . TIP ID '(' ')'
    9           | . ARRAY LT TIP ',' INTEGER GT ID
   28 bloc_main: . MAIN '{' lista_instructiuni '}'

    TIP     shift, and go to state 1
    MAIN    shift, and go to state 13
    STRUCT  shift, and go to state 2
    CONST   shift, and go to state 3
    ARRAY   shift, and go to state 4

    declaratie  go to state 14
    bloc_main   go to state 15


State 7

    2 declaratii: declaratie . ';'

    ';'  shift, and go to state 16


State 8

    4 declaratie: TIP ID .  [';']
    7           | TIP ID . '(' lista_param ')'
    8           | TIP ID . '(' ')'

    '('  shift, and go to state 17

    $default  reduce using rule 4 (declaratie)


State 9

    6 declaratie: STRUCT ID . '{' declaratii '}'

    '{'  shift, and go to state 18


State 10

    5 declaratie: CONST TIP . ID

    ID  shift, and go to state 19


State 11

    9 declaratie: ARRAY LT . TIP ',' INTEGER GT ID

    TIP  shift, and go to state 20


State 12

    0 $accept: progr $end .

    $default  accept


State 13

   28 bloc_main: MAIN . '{' lista_instructiuni '}'

    '{'  shift, and go to state 21


State 14

    3 declaratii: declaratii declaratie . ';'

    ';'  shift, and go to state 22


State 15

    1 progr: declaratii bloc_main . lista_functii
   29 lista_functii: . functie
   30              | . lista_functii functie
   31 functie: . FUNCTION TIP ID '(' lista_param ')' bloc
   32        | . %empty  [$end, FUNCTION]

    FUNCTION  shift, and go to state 23

    FUNCTION  [reduce using rule 32 (functie)]
    $default  reduce using rule 32 (functie)

    lista_functii  go to state 24
    functie        go to state 25


State 16

    2 declaratii: declaratie ';' .

    $default  reduce using rule 2 (declaratii)


State 17

    7 declaratie: TIP ID '(' . lista_param ')'
    8           | TIP ID '(' . ')'
   10 lista_param: . param
   11            | . lista_param ',' param
   12 param: . TIP ID

    TIP  shift, and go to state 26
    ')'  shift, and go to state 27

    lista_param  go to state 28
    param        go to state 29


State 18

    2 declaratii: . declaratie ';'
    3           | . declaratii declaratie ';'
    4 declaratie: . TIP ID
    5           | . CONST TIP ID
    6           | . STRUCT ID '{' declaratii '}'
    6           | STRUCT ID '{' . declaratii '}'
    7           | . TIP ID '(' lista_param ')'
    8           | . TIP ID '(' ')'
    9           | . ARRAY LT TIP ',' INTEGER GT ID

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2
    CONST   shift, and go to state 3
    ARRAY   shift, and go to state 4

    declaratii  go to state 30
    declaratie  go to state 7


State 19

    5 declaratie: CONST TIP ID .

    $default  reduce using rule 5 (declaratie)


State 20

    9 declaratie: ARRAY LT TIP . ',' INTEGER GT ID

    ','  shift, and go to state 31


State 21

   28 bloc_main: MAIN '{' . lista_instructiuni '}'
   33 lista_instructiuni: . lista_control
   34                   | . lista_statement
   35                   | . lista_instructiuni lista_control
   36                   | . lista_instructiuni lista_statement
   37 lista_statement: . statement ';'
   38                | . lista_statement statement ';'
   39 statement: . ID ASSIGN ID
   40          | . ID ASSIGN INTEGER
   41          | . ID ASSIGN expresie
   42          | . ID ASSIGN FLOAT
   43          | . ID ASSIGN BOOLEAN
   44          | . ID ASSIGN '"' STRING '"'
   45          | . ID '.' ID ASSIGN ID '.' ID
   46          | . ID '.' ID ASSIGN INTEGER
   47          | . ID '.' ID ASSIGN FLOAT
   48          | . ID '.' ID ASSIGN BOOLEAN
   49          | . ID '.' ID ASSIGN '"' STRING '"'
   50          | . ID '(' lista_apel ')'
   51          | . ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | . ID '[' INTEGER ']' ASSIGN INTEGER
   53          | . ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | . ID '[' INTEGER ']' ASSIGN FLOAT
   55          | . ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | . ID '[' INTEGER ']' ASSIGN expresie
   64 control: . IF '(' conditie ')' '{' lista_instructiuni '}'
   65        | . IF '(' conditie ')' ELSE '{' lista_instructiuni '}'
   66        | . FOR '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'
   67        | . WHILE '(' conditie ')' '{' lista_instructiuni '}'
   68 lista_control: . control
   69              | . lista_control control

    ID     shift, and go to state 32
    IF     shift, and go to state 33
    FOR    shift, and go to state 34
    WHILE  shift, and go to state 35

    lista_instructiuni  go to state 36
    lista_statement     go to state 37
    statement           go to state 38
    control             go to state 39
    lista_control       go to state 40


State 22

    3 declaratii: declaratii declaratie ';' .

    $default  reduce using rule 3 (declaratii)


State 23

   31 functie: FUNCTION . TIP ID '(' lista_param ')' bloc

    TIP  shift, and go to state 41


State 24

    1 progr: declaratii bloc_main lista_functii .  [$end]
   30 lista_functii: lista_functii . functie
   31 functie: . FUNCTION TIP ID '(' lista_param ')' bloc
   32        | . %empty  [$end, FUNCTION]

    FUNCTION  shift, and go to state 23

    $end      reduce using rule 1 (progr)
    $end      [reduce using rule 32 (functie)]
    FUNCTION  [reduce using rule 32 (functie)]
    $default  reduce using rule 1 (progr)

    functie  go to state 42


State 25

   29 lista_functii: functie .

    $default  reduce using rule 29 (lista_functii)


State 26

   12 param: TIP . ID

    ID  shift, and go to state 43


State 27

    8 declaratie: TIP ID '(' ')' .

    $default  reduce using rule 8 (declaratie)


State 28

    7 declaratie: TIP ID '(' lista_param . ')'
   11 lista_param: lista_param . ',' param

    ')'  shift, and go to state 44
    ','  shift, and go to state 45


State 29

   10 lista_param: param .

    $default  reduce using rule 10 (lista_param)


State 30

    3 declaratii: declaratii . declaratie ';'
    4 declaratie: . TIP ID
    5           | . CONST TIP ID
    6           | . STRUCT ID '{' declaratii '}'
    6           | STRUCT ID '{' declaratii . '}'
    7           | . TIP ID '(' lista_param ')'
    8           | . TIP ID '(' ')'
    9           | . ARRAY LT TIP ',' INTEGER GT ID

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2
    CONST   shift, and go to state 3
    ARRAY   shift, and go to state 4
    '}'     shift, and go to state 46

    declaratie  go to state 14


State 31

    9 declaratie: ARRAY LT TIP ',' . INTEGER GT ID

    INTEGER  shift, and go to state 47


State 32

   39 statement: ID . ASSIGN ID
   40          | ID . ASSIGN INTEGER
   41          | ID . ASSIGN expresie
   42          | ID . ASSIGN FLOAT
   43          | ID . ASSIGN BOOLEAN
   44          | ID . ASSIGN '"' STRING '"'
   45          | ID . '.' ID ASSIGN ID '.' ID
   46          | ID . '.' ID ASSIGN INTEGER
   47          | ID . '.' ID ASSIGN FLOAT
   48          | ID . '.' ID ASSIGN BOOLEAN
   49          | ID . '.' ID ASSIGN '"' STRING '"'
   50          | ID . '(' lista_apel ')'
   51          | ID . '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | ID . '[' INTEGER ']' ASSIGN INTEGER
   53          | ID . '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | ID . '[' INTEGER ']' ASSIGN FLOAT
   55          | ID . '[' INTEGER ']' ASSIGN BOOLEAN
   56          | ID . '[' INTEGER ']' ASSIGN expresie

    ASSIGN  shift, and go to state 48
    '('     shift, and go to state 49
    '.'     shift, and go to state 50
    '['     shift, and go to state 51


State 33

   64 control: IF . '(' conditie ')' '{' lista_instructiuni '}'
   65        | IF . '(' conditie ')' ELSE '{' lista_instructiuni '}'

    '('  shift, and go to state 52


State 34

   66 control: FOR . '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'

    '('  shift, and go to state 53


State 35

   67 control: WHILE . '(' conditie ')' '{' lista_instructiuni '}'

    '('  shift, and go to state 54


State 36

   28 bloc_main: MAIN '{' lista_instructiuni . '}'
   35 lista_instructiuni: lista_instructiuni . lista_control
   36                   | lista_instructiuni . lista_statement
   37 lista_statement: . statement ';'
   38                | . lista_statement statement ';'
   39 statement: . ID ASSIGN ID
   40          | . ID ASSIGN INTEGER
   41          | . ID ASSIGN expresie
   42          | . ID ASSIGN FLOAT
   43          | . ID ASSIGN BOOLEAN
   44          | . ID ASSIGN '"' STRING '"'
   45          | . ID '.' ID ASSIGN ID '.' ID
   46          | . ID '.' ID ASSIGN INTEGER
   47          | . ID '.' ID ASSIGN FLOAT
   48          | . ID '.' ID ASSIGN BOOLEAN
   49          | . ID '.' ID ASSIGN '"' STRING '"'
   50          | . ID '(' lista_apel ')'
   51          | . ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | . ID '[' INTEGER ']' ASSIGN INTEGER
   53          | . ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | . ID '[' INTEGER ']' ASSIGN FLOAT
   55          | . ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | . ID '[' INTEGER ']' ASSIGN expresie
   64 control: . IF '(' conditie ')' '{' lista_instructiuni '}'
   65        | . IF '(' conditie ')' ELSE '{' lista_instructiuni '}'
   66        | . FOR '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'
   67        | . WHILE '(' conditie ')' '{' lista_instructiuni '}'
   68 lista_control: . control
   69              | . lista_control control

    ID     shift, and go to state 32
    IF     shift, and go to state 33
    FOR    shift, and go to state 34
    WHILE  shift, and go to state 35
    '}'    shift, and go to state 55

    lista_statement  go to state 56
    statement        go to state 38
    control          go to state 39
    lista_control    go to state 57


State 37

   34 lista_instructiuni: lista_statement .  [ID, IF, FOR, WHILE, '}']
   38 lista_statement: lista_statement . statement ';'
   39 statement: . ID ASSIGN ID
   40          | . ID ASSIGN INTEGER
   41          | . ID ASSIGN expresie
   42          | . ID ASSIGN FLOAT
   43          | . ID ASSIGN BOOLEAN
   44          | . ID ASSIGN '"' STRING '"'
   45          | . ID '.' ID ASSIGN ID '.' ID
   46          | . ID '.' ID ASSIGN INTEGER
   47          | . ID '.' ID ASSIGN FLOAT
   48          | . ID '.' ID ASSIGN BOOLEAN
   49          | . ID '.' ID ASSIGN '"' STRING '"'
   50          | . ID '(' lista_apel ')'
   51          | . ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | . ID '[' INTEGER ']' ASSIGN INTEGER
   53          | . ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | . ID '[' INTEGER ']' ASSIGN FLOAT
   55          | . ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | . ID '[' INTEGER ']' ASSIGN expresie

    ID  shift, and go to state 32

    ID        [reduce using rule 34 (lista_instructiuni)]
    $default  reduce using rule 34 (lista_instructiuni)

    statement  go to state 58


State 38

   37 lista_statement: statement . ';'

    ';'  shift, and go to state 59


State 39

   68 lista_control: control .

    $default  reduce using rule 68 (lista_control)


State 40

   33 lista_instructiuni: lista_control .  [ID, IF, FOR, WHILE, '}']
   64 control: . IF '(' conditie ')' '{' lista_instructiuni '}'
   65        | . IF '(' conditie ')' ELSE '{' lista_instructiuni '}'
   66        | . FOR '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'
   67        | . WHILE '(' conditie ')' '{' lista_instructiuni '}'
   69 lista_control: lista_control . control

    IF     shift, and go to state 33
    FOR    shift, and go to state 34
    WHILE  shift, and go to state 35

    IF        [reduce using rule 33 (lista_instructiuni)]
    FOR       [reduce using rule 33 (lista_instructiuni)]
    WHILE     [reduce using rule 33 (lista_instructiuni)]
    $default  reduce using rule 33 (lista_instructiuni)

    control  go to state 60


State 41

   31 functie: FUNCTION TIP . ID '(' lista_param ')' bloc

    ID  shift, and go to state 61


State 42

   30 lista_functii: lista_functii functie .

    $default  reduce using rule 30 (lista_functii)


State 43

   12 param: TIP ID .

    $default  reduce using rule 12 (param)


State 44

    7 declaratie: TIP ID '(' lista_param ')' .

    $default  reduce using rule 7 (declaratie)


State 45

   11 lista_param: lista_param ',' . param
   12 param: . TIP ID

    TIP  shift, and go to state 26

    param  go to state 62


State 46

    6 declaratie: STRUCT ID '{' declaratii '}' .

    $default  reduce using rule 6 (declaratie)


State 47

    9 declaratie: ARRAY LT TIP ',' INTEGER . GT ID

    GT  shift, and go to state 63


State 48

   39 statement: ID ASSIGN . ID
   40          | ID ASSIGN . INTEGER
   41          | ID ASSIGN . expresie
   42          | ID ASSIGN . FLOAT
   43          | ID ASSIGN . BOOLEAN
   44          | ID ASSIGN . '"' STRING '"'
   57 expresie: . expresie PLUS expresie
   58         | . expresie MINUS expresie
   59         | . expresie MULT expresie
   60         | . expresie SUBT expresie
   61         | . '(' expresie ')'
   62         | . ID
   63         | . INTEGER

    ID       shift, and go to state 64
    INTEGER  shift, and go to state 65
    BOOLEAN  shift, and go to state 66
    FLOAT    shift, and go to state 67
    '('      shift, and go to state 68
    '"'      shift, and go to state 69

    expresie  go to state 70


State 49

   50 statement: ID '(' . lista_apel ')'
   70 lista_apel: . INTEGER
   71           | . lista_apel ',' INTEGER

    INTEGER  shift, and go to state 71

    lista_apel  go to state 72


State 50

   45 statement: ID '.' . ID ASSIGN ID '.' ID
   46          | ID '.' . ID ASSIGN INTEGER
   47          | ID '.' . ID ASSIGN FLOAT
   48          | ID '.' . ID ASSIGN BOOLEAN
   49          | ID '.' . ID ASSIGN '"' STRING '"'

    ID  shift, and go to state 73


State 51

   51 statement: ID '[' . INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | ID '[' . INTEGER ']' ASSIGN INTEGER
   53          | ID '[' . INTEGER ']' ASSIGN '"' STRING '"'
   54          | ID '[' . INTEGER ']' ASSIGN FLOAT
   55          | ID '[' . INTEGER ']' ASSIGN BOOLEAN
   56          | ID '[' . INTEGER ']' ASSIGN expresie

    INTEGER  shift, and go to state 74


State 52

   13 conditie: . ID
   14         | . STRING
   15         | . INTEGER
   16         | . BOOLEAN
   17         | . FLOAT
   18         | . conditie LT conditie
   19         | . conditie GT conditie
   20         | . conditie LTE conditie
   21         | . conditie GTE conditie
   22         | . conditie EQ conditie
   23         | . conditie NEQ conditie
   24         | . conditie OR conditie
   25         | . conditie AND conditie
   26         | . '(' conditie ')'
   64 control: IF '(' . conditie ')' '{' lista_instructiuni '}'
   65        | IF '(' . conditie ')' ELSE '{' lista_instructiuni '}'

    ID       shift, and go to state 75
    INTEGER  shift, and go to state 76
    STRING   shift, and go to state 77
    BOOLEAN  shift, and go to state 78
    FLOAT    shift, and go to state 79
    '('      shift, and go to state 80

    conditie  go to state 81


State 53

   39 statement: . ID ASSIGN ID
   40          | . ID ASSIGN INTEGER
   41          | . ID ASSIGN expresie
   42          | . ID ASSIGN FLOAT
   43          | . ID ASSIGN BOOLEAN
   44          | . ID ASSIGN '"' STRING '"'
   45          | . ID '.' ID ASSIGN ID '.' ID
   46          | . ID '.' ID ASSIGN INTEGER
   47          | . ID '.' ID ASSIGN FLOAT
   48          | . ID '.' ID ASSIGN BOOLEAN
   49          | . ID '.' ID ASSIGN '"' STRING '"'
   50          | . ID '(' lista_apel ')'
   51          | . ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | . ID '[' INTEGER ']' ASSIGN INTEGER
   53          | . ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | . ID '[' INTEGER ']' ASSIGN FLOAT
   55          | . ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | . ID '[' INTEGER ']' ASSIGN expresie
   66 control: FOR '(' . statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'

    ID  shift, and go to state 32

    statement  go to state 82


State 54

   13 conditie: . ID
   14         | . STRING
   15         | . INTEGER
   16         | . BOOLEAN
   17         | . FLOAT
   18         | . conditie LT conditie
   19         | . conditie GT conditie
   20         | . conditie LTE conditie
   21         | . conditie GTE conditie
   22         | . conditie EQ conditie
   23         | . conditie NEQ conditie
   24         | . conditie OR conditie
   25         | . conditie AND conditie
   26         | . '(' conditie ')'
   67 control: WHILE '(' . conditie ')' '{' lista_instructiuni '}'

    ID       shift, and go to state 75
    INTEGER  shift, and go to state 76
    STRING   shift, and go to state 77
    BOOLEAN  shift, and go to state 78
    FLOAT    shift, and go to state 79
    '('      shift, and go to state 80

    conditie  go to state 83


State 55

   28 bloc_main: MAIN '{' lista_instructiuni '}' .

    $default  reduce using rule 28 (bloc_main)


State 56

   36 lista_instructiuni: lista_instructiuni lista_statement .  [ID, IF, FOR, WHILE, '}']
   38 lista_statement: lista_statement . statement ';'
   39 statement: . ID ASSIGN ID
   40          | . ID ASSIGN INTEGER
   41          | . ID ASSIGN expresie
   42          | . ID ASSIGN FLOAT
   43          | . ID ASSIGN BOOLEAN
   44          | . ID ASSIGN '"' STRING '"'
   45          | . ID '.' ID ASSIGN ID '.' ID
   46          | . ID '.' ID ASSIGN INTEGER
   47          | . ID '.' ID ASSIGN FLOAT
   48          | . ID '.' ID ASSIGN BOOLEAN
   49          | . ID '.' ID ASSIGN '"' STRING '"'
   50          | . ID '(' lista_apel ')'
   51          | . ID '[' INTEGER ']' ASSIGN ID '[' INTEGER ']'
   52          | . ID '[' INTEGER ']' ASSIGN INTEGER
   53          | . ID '[' INTEGER ']' ASSIGN '"' STRING '"'
   54          | . ID '[' INTEGER ']' ASSIGN FLOAT
   55          | . ID '[' INTEGER ']' ASSIGN BOOLEAN
   56          | . ID '[' INTEGER ']' ASSIGN expresie

    ID  shift, and go to state 32

    ID        [reduce using rule 36 (lista_instructiuni)]
    $default  reduce using rule 36 (lista_instructiuni)

    statement  go to state 58


State 57

   35 lista_instructiuni: lista_instructiuni lista_control .  [ID, IF, FOR, WHILE, '}']
   64 control: . IF '(' conditie ')' '{' lista_instructiuni '}'
   65        | . IF '(' conditie ')' ELSE '{' lista_instructiuni '}'
   66        | . FOR '(' statement ';' conditie ';' statement ')' '{' lista_instructiuni '}'
   67        | . WHILE '(' conditie ')' '{' lista_instructiuni '}'
   69 lista_control: lista_control . control

    IF     shift, and go to state 33
    FOR    shift, and go to state 34
    WHILE  shift, and go to state 35

    IF        [reduce using rule 35 (lista_instructiuni)]
    FOR       [reduce using rule 35 (lista_instructiuni)]
    WHILE     [reduce using rule 35 (lista_instructiuni)]
    $default  reduce using rule 35 (lista_instructiuni)

    control  go to state 60


State 58

   38 lista_statement: lista_statement statement . ';'

    ';'  shift, and go to state 84


State 59

   37 lista_statement: statement ';' .

    $default  reduce using rule 37 (lista_statement)


State 60

   69 lista_control: lista_control control .

    $default  reduce using rule 69 (lista_control)


State 61

   31 functie: FUNCTION TIP ID . '(' lista_param ')' bloc

    '('  shift, and go to state 85


State 62

   11 lista_param: lista_param ',' param .

    $default  reduce using rule 11 (lista_param)


State 63

    9 declaratie: ARRAY LT TIP ',' INTEGER GT . ID

    ID  shift, and go to state 86


State 64

   39 statement: ID ASSIGN ID .  [';', ')']
   62 expresie: ID .  [PLUS, MINUS, MULT, SUBT, ';', ')']

    ';'       reduce using rule 39 (statement)
    ';'       [reduce using rule 62 (expresie)]
    ')'       reduce using rule 39 (statement)
    ')'       [reduce using rule 62 (expresie)]
    $default  reduce using rule 62 (expresie)


State 65

   40 statement: ID ASSIGN INTEGER .  [';', ')']
   63 expresie: INTEGER .  [PLUS, MINUS, MULT, SUBT, ';', ')']

    ';'       reduce using rule 40 (statement)
    ';'       [reduce using rule 63 (expresie)]
    ')'       reduce using rule 40 (statement)
    ')'       [reduce using rule 63 (expresie)]
    $default  reduce using rule 63 (expresie)


State 66

   43 statement: ID ASSIGN BOOLEAN .

    $default  reduce using rule 43 (statement)


State 67

   42 statement: ID ASSIGN FLOAT .

    $default  reduce using rule 42 (statement)


State 68

   57 expresie: . expresie PLUS expresie
   58         | . expresie MINUS expresie
   59         | . expresie MULT expresie
   60         | . expresie SUBT expresie
   61         | . '(' expresie ')'
   61         | '(' . expresie ')'
   62         | . ID
   63         | . INTEGER

    ID       shift, and go to state 87
    INTEGER  shift, and go to state 88
    '('      shift, and go to state 68

    expresie  go to state 89


State 69

   44 statement: ID ASSIGN '"' . STRING '"'

    STRING  shift, and go to state 90


State 70

   41 statement: ID ASSIGN expresie .  [';', ')']
   57 expresie: expresie . PLUS expresie
   58         | expresie . MINUS expresie
   59         | expresie . MULT expresie
   60         | expresie . SUBT expresie

    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    MULT   shift, and go to state 93
    SUBT   shift, and go to state 94

    $default  reduce using rule 41 (statement)


State 71

   70 lista_apel: INTEGER .

    $default  reduce using rule 70 (lista_apel)


State 72

   50 statement: ID '(' lista_apel . ')'
   71 lista_apel: lista_apel . ',' INTEGER

    ')'  shift, and go to state 95
    ','  shift, and go to state 96


State 73

   45 statement: ID '.' ID . ASSIGN ID '.' ID
   46          | ID '.' ID . ASSIGN INTEGER
   47          | ID '.' ID . ASSIGN FLOAT
   48          | ID '.' ID . ASSIGN BOOLEAN
   49          | ID '.' ID . ASSIGN '"' STRING '"'

    ASSIGN  shift, and go to state 97


State 74

   51 statement: ID '[' INTEGER . ']' ASSIGN ID '[' INTEGER ']'
   52          | ID '[' INTEGER . ']' ASSIGN INTEGER
   53          | ID '[' INTEGER . ']' ASSIGN '"' STRING '"'
   54          | ID '[' INTEGER . ']' ASSIGN FLOAT
   55          | ID '[' INTEGER . ']' ASSIGN BOOLEAN
   56          | ID '[' INTEGER . ']' ASSIGN expresie

    ']'  shift, and go to state 98


State 75

   13 conditie: ID .

    $default  reduce using rule 13 (conditie)


State 76

   15 conditie: INTEGER .

    $default  reduce using rule 15 (conditie)


State 77

   14 conditie: STRING .

    $default  reduce using rule 14 (conditie)


State 78

   16 conditie: BOOLEAN .

    $default  reduce using rule 16 (conditie)


State 79

   17 conditie: FLOAT .

    $default  reduce using rule 17 (conditie)


State 80

   13 conditie: . ID
   14         | . STRING
   15         | . INTEGER
   16         | . BOOLEAN
   17         | . FLOAT
   18         | . conditie LT conditie
   19         | . conditie GT conditie
   20         | . conditie LTE conditie
   21         | . conditie GTE conditie
   22         | . conditie EQ conditie
   23         | . conditie NEQ conditie
   24         | . conditie OR conditie
   25         | . conditie AND conditie
   26         | . '(' conditie ')'
   26         | '(' . conditie ')'

    ID       shift, and go to state 75
    INTEGER  shift, and go to state 76
    STRING   shift, and go to state 77
    BOOLEAN  shift, and go to state 78
    FLOAT    shift, and go to state 79
    '('      shift, and go to state 80

    conditie  go to state 99


State 81
